# tarsier

./: .gitignore
cookbook/: langchain-web-agent Anthropic.ipynb  langchain-web-agent.ipynb
discovery/: app.py  discovery.py  pyproject.toml
discovery/reflection_agent/: chains.py  main.py
discovery/reflexion_agent/: chains.py  main.py  schemas.py
